--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(as.xts.data.table)
 export(getDTSymbols)
 export(raw_return)
 export(raw_value)
+export(reinvested_shares)
 import(data.table)
