--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,13 @@ S3method(as.data.table,xts)
 S3method(make_raw_return,data.table)
 S3method(make_raw_return,default)
 S3method(make_raw_return,xts)
+S3method(make_reinvested_return,data.table)
+S3method(make_reinvested_return,default)
+S3method(make_reinvested_return,xts)
 export(as.xts.data.table)
 export(getDTSymbols)
 export(make_raw_return)
 export(make_raw_value)
+export(make_reinvested_return)
 export(make_reinvested_shares)
 import(data.table)
