Started unadjust and make_shares.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,6 @@ export(make_raw_return)
 export(make_raw_value)
 export(make_reinvested_return)
 export(make_reinvested_shares)
+export(make_shares)
+export(unadjust)
 import(data.table)
