Unadjust specialized to data.table.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ S3method(make_raw_return,xts)
 S3method(make_reinvested_return,data.table)
 S3method(make_reinvested_return,default)
 S3method(make_reinvested_return,xts)
+S3method(unadjust,data.table)
+S3method(unadjust,default)
 export(as.xts.data.table)
 export(getDTSymbols)
 export(make_raw_return)
