--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(make_reinvested_return,default)
 S3method(make_reinvested_return,xts)
 S3method(unadjust,data.table)
 S3method(unadjust,default)
+S3method(unadjust,xts)
 export(as.xts.data.table)
 export(getDTSymbols)
 export(make_raw_return)
