--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,28 @@
 Package: adjustr
 Type: Package
-Title: (Un)Adjust Financial Data for Splits and Dividends
+Title: Adjust Stock Price Data for Splits and Dividends
 Version: 0.1.0
 Date: 2015-03-13
 Author: EMP <e-mu-pi@users.noreply.github.com>
 Maintainer: EMP <e-mu-pi@users.noreply.github.com>
-Description: Provide alternative split and dividend adjustments to the standard dividend adjustment provided by quantmod/Yahoo.
-License: file LICENSE
+Description: Implementation of split and dividend adjustment alternatives 
+    to the standard dividend adjustment provided by quantmod/Yahoo. 
+    It provides functions to remove the split adjustments
+    from dividends. It provides two ways to include splits and dividends
+    with price data (raw and reinvested) complementary to the adjusted 
+    values from Yahoo and quantmod. The raw adjustment assumes that
+    assumes that dividends are added to your value and splits alters 
+    the number of shares you hold. The reinvested adjustment assumes
+    that dividends and splits alter the number of shares you hold.
+License: GPL-3
+URL: https://github.com/e-mu-pi/adjustr
+BugReports: https://github.com/e-mu-pi/adjustr/issues
 Imports:
-  quantmod (>= 0.4-4),
-  data.table (>= 1.9.4),
-  dplyr (>= 0.4.1),
-  reshape2 (>= 1.4),
-  tidyr (>= 0.1),
-  TTR (>= 0.22-0),
-  xts (>= 0.9-7),
-  zoo (>= 1.7-11)
+    quantmod (>= 0.4-4),
+    data.table (>= 1.9.4),
+    dplyr (>= 0.4.1),
+    tidyr (>= 0.1),
+    xts (>= 0.9-7),
+    zoo (>= 1.7-11)
 Suggests:
-  testthat
+    testthat (>= 0.9.1)
